--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ faiss/python/swigfaiss_avx2.swig
 faiss/python/swigfaiss_avx512.swig
 faiss/python/swigfaiss_avx512_spr.swig
 faiss/python/swigfaiss_sve.swig
+
+/install_*/
+/build_*/
+/.cache/
+/compile_commands.json
